potential fix for modal overflow

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -7,7 +7,7 @@ nav {
   background-color: $secondary!important;
   justify-content: space-between;
   align-items: center;
-  height: auto!important;
+  height: 77px!important;
   overflow: hidden;
   a {
     line-height: 0px;
@@ -25,8 +25,8 @@ nav {
     height: 75px;
     > div {
       height: 100%;
-    overflow: hidden;
-    display: flex;
+      overflow: hidden;
+      display: flex;
     }
     a {
       font-family: 'Roboto', sans-serif;
